--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
+body {
+  background-color: rgb(255, 222, 206);
+}
+
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -7,14 +10,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3) ), url('paris.gif') no-repeat;
+  background-size: cover;
+  width: 100%;
+  background-position: center center;
 }
 
 .App-link {
