--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  text-align: center;
 }
 
 .App-logo {
@@ -6,10 +7,14 @@
 }
 
 .App-header {
-  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3) ), url('paris.gif') no-repeat;
-  background-size: cover;
-  width: 100%;
-  background-position: center center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
