#26 made Navbar and Header components with their respective stories

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,3 +1,9 @@
-.navbar {
-  z-index:9;
+.Navbar {
+  background-color: transparent;
+}
+.Navbar .title {
+    color: white !important;
+  }
+a {
+  text-decoration: none !important;
 }
