--- a/client/src/components/CountrySelector/CountrySelector.css
+++ b/client/src/components/CountrySelector/CountrySelector.css
@@ -1,12 +1,30 @@
 .country-selector-form {
-  border-radius: 25px;
+  border-radius: 100px;
   border: 2px solid #007bff93;
-  padding: 50px;
+  padding: 10px;
+  width: 1000px;
+  height: 250px;
+  margin: 0 auto;
 }
 
 .country-selector-title {
   text-align: center;
   padding-bottom: 50px;
+}
+
+.country-selector-form Label{
+font-size: large;
+font-weight: bold;
+}
+
+.country-selector-form  Button{
+  display: inline-block;
+  border-radius: 8px;
+  background-color: #451ef4;
+  color: #FFFFFF;
+  font-size: 18px;
+  padding: 14px;
+  width: 115px;
 }
 
 @media screen and (max-width: 576px) {
