--- a/client/src/components/CountrySelector/CountrySelector.css
+++ b/client/src/components/CountrySelector/CountrySelector.css
@@ -1,11 +1,8 @@
 .country-selector-form {
-  border-radius: 100px;
-  border: 2px solid #007bff93;
   padding: 10px;
   width: 1000px;
   height: 250px;
   margin: 0 auto;
-  background: white;
 }
 
 .country-selector-title {
@@ -13,27 +10,33 @@
   padding-bottom: 50px;
 }
 
-.country-selector-form Label{
-font-size: large;
-font-weight: bold;
-}
-.country-selector-form .form-control{
-
-  border: 2px solid #007bff93;
+.country-selector-form Label {
+  font-size: large;
+  font-weight: bold;
 }
 
-.country-selector-form  Button{
-  display: inline-block;
+.TSButton {
   border-radius: 8px;
-  background-color: #451ef4;
-  color: #FFFFFF;
-  font-size: 18px;
-  padding: 14px;
-  width: 115px;
+  color: #ff6e61 !important;
+  border-color: #ff6e61;
+  background-color: rgba(0, 0, 0, 0.185);
+} */
+
+.TSButton:hover {
+  background-color: #ff6e61 !important;
+  border-color: #ff6e61 !important;
 }
 
 @media screen and (max-width: 576px) {
   .col-sm-auto {
     padding-top: 30px;
   }
+}
+
+.form-label {
+  color: white !important;
+}
+
+Form {
+  margin-top: 100px;
 }
