--- a/client/src/components/CountrySelector/CountrySelector.css
+++ b/client/src/components/CountrySelector/CountrySelector.css
@@ -1,6 +1,6 @@
 .country-selector-form {
   padding: 10px;
-  width: 1000px;
+  width: 100%;
   height: 250px;
   margin: 0 auto;
 }
@@ -15,16 +15,23 @@
   font-weight: bold;
 }
 
-.TSButton {
+.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle {
+  background-color: #ff6e61;
+  border-color: #ff6e61;
+  color: white !important;
+}
+
+.btn-outline-primary:hover {
+  background-color: #ff6e61;
+  border-color: #ff6e61;
+  color: white !important;
+}
+
+.btn-outline-primary {
   border-radius: 8px;
   color: #ff6e61 !important;
   border-color: #ff6e61;
   background-color: rgba(0, 0, 0, 0.185);
-} */
-
-.TSButton:hover {
-  background-color: #ff6e61 !important;
-  border-color: #ff6e61 !important;
 }
 
 @media screen and (max-width: 576px) {
@@ -39,4 +46,13 @@
 
 Form {
   margin-top: 100px;
+}
+
+@media screen and (max-width: 576px) {
+  .originInput, .destinationInput {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    padding-top: 20px;
+  }
 }
