--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,3 +1,7 @@
+.homeHero {
+  margin-top: 200px;
+}
+
 .homeTitle {
   font: normal normal normal 65px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
   color: white;
@@ -35,4 +39,54 @@ header video {
 
 .container {
   text-align: center;
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    min-height: 100px;
+  }
+
+  .homeTitle {
+    font: normal normal normal 25px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .homeTyped {
+    font: normal normal normal 25px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
+    color: white;
+    text-align: center;
+  }
+
+  .homeSubtitle {
+    font: normal normal normal 10px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
+    color: white;
+    text-align: center;
+  }
+}
+
+@media (max-width:1080px) and (min-width:577px) {
+  .container {
+    min-height: 200px;
+  }
+
+  .homeTitle {
+    font: normal normal normal 45px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .homeTyped {
+    font: normal normal normal 45px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
+    color: white;
+    text-align: center;
+  }
+
+  .homeSubtitle {
+    font: normal normal normal 15px/1.4em georgia,palatino,'book antiqua','palatino linotype',serif;
+    color: white;
+    text-align: center;
+  }
 }
