#96 removed br tags, improved overall UI style

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -4,11 +4,14 @@
 	font-family: 'Open Sans', sans-serif;
 }
 
+.TScardBody {
+	text-align: left;
+}
+
 .cardHeader {
 	background-color: white;
 	color: rgb(134, 134, 146);
 	font-size: large;
-	align-items: center;
 }
 
 .cardDivider {
