--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -6,7 +6,7 @@
 	background-size: cover;
 	width: 100%;
 	background-position: center center;
-	height: 45%;
+	height: 400px !important;
 }
 .AppHeader .title {
 	text-align: center;
