--- a/client/src/components/Subtitle/Subtitle.css
+++ b/client/src/components/Subtitle/Subtitle.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 .subtitle {
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 15px;
+	padding: 30px !important;
+	text-align: left;
+	padding-left: 30px;
+	font-family: "Source Sans Pro", Helvetica, sans-serif;
+	font-size: 1.75rem;
+	font-weight: 400;
+	line-height: 1.3;
 	padding-top: 13px;
 	padding-bottom: 2px;
 	color: rgb(134, 134, 146);
-	font-weight: 600;
 }
 
 .subtitleDivider {
