#109 Fix scrolling issue in country page by waiting for data before render

--- a/client/src/components/Subtitle/Subtitle.css
+++ b/client/src/components/Subtitle/Subtitle.css
@@ -2,7 +2,7 @@
 
 .subtitle {
 	padding: 30px !important;
-	text-align: left;
+	text-align: center;
 	padding-left: 30px;
 	font-family: "Source Sans Pro", Helvetica, sans-serif;
 	font-size: 1.75rem;
