--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -16,6 +16,22 @@
 	font-weight: 750;
 	font-family: 'Source Sans Pro', sans-serif;
 }
+.AppHeader .title2 {
+	text-align: center;
+	padding-top: 1%;
+	color: white;
+	font-size: 35px;
+	font-weight: 750;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+.AppHeader .title3 {
+	text-align: center;
+	padding-top: 1%;
+	color: white;
+	font-size: 35px;
+	font-weight: 750;
+	font-family: 'Source Sans Pro', sans-serif;
+}
 .AppHeader .subtitle {
 	text-align: center;
 	color: white;
