#95 found and tested the looks of the gifs

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -2,7 +2,7 @@
 
 .AppHeader {
 	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-		url('paris.gif') no-repeat;
+		url('boreal.gif') no-repeat;
 	background-size: cover;
 	width: 100%;
 	background-position: center center;
