#95 able to change pics based on a random number, sizing and quality are terrible

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 
 .AppHeader {
-	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-		url('forestt.gif') no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3));
 	background-size: cover;
 	width: 100%;
 	background-position: center center;
