--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -6,6 +6,10 @@
 	width: 100%;
 	background-position: center center;
 	height: 400px !important;
+	z-index: -1;
+	position: relative;
+	
+	
 }
 .AppHeader .title {
 	text-align: center;
@@ -14,6 +18,7 @@
 	font-size: 40px;
 	font-weight: 750;
 	font-family: 'Source Sans Pro', sans-serif;
+
 }
 .AppHeader .title2 {
 	text-align: center;
@@ -22,6 +27,8 @@
 	font-size: 35px;
 	font-weight: 750;
 	font-family: 'Source Sans Pro', sans-serif;
+	position: relative;
+	
 }
 .AppHeader .title3 {
 	text-align: center;
@@ -30,6 +37,7 @@
 	font-size: 35px;
 	font-weight: 750;
 	font-family: 'Source Sans Pro', sans-serif;
+	position: relative;
 }
 .AppHeader .subtitle {
 	text-align: center;
