--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,3 +17,47 @@
 .fp-tableCell {
   vertical-align: top !important;
 }
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  color: rgb(107, 107, 107) !important;
+  background-color: rgb(255,	255,	255	) !important;
+  border-radius: 10px;
+}
+
+.nav-item {
+  padding-right: 20px;
+}
+
+.nav-item>a {
+  padding: 0.7em;
+  color: rgb(107	107	107		) !important;
+  font-size: 1.0em;
+}
+
+.nav-item>a:hover {
+  background-color: rgb(237, 237, 237) !important;
+  border-radius: 10px;
+}
+
+#footer {
+  padding-top: 250px;
+}
+
+.parallax {
+  /* The image used */
+  background-image: linear-gradient( 135deg, #FEB692 10%, #EA5455 100%);
+}
+
+.sticky {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
