--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,3 +61,13 @@ hr {
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+.col-lg-8 {
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+}
+
+.row {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
