--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 
 .AppHeaderWrapper {
-	padding-bottom: 50px;
 	padding-top: 150px;
 }
-
 .AppHeader {
 	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('pictures/output-na.gif');
 	background-size: cover;
@@ -13,6 +11,7 @@
 	height: 400px !important;
 	z-index: 1;
 	position: relative;
+	border-radius: 10px;
 }
 .AppHeader .title {
 	text-align: center;
