--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,7 +45,9 @@
 
 .parallax {
   /* The image used */
-  background-image: linear-gradient( 135deg, #FEB692 10%, #EA5455 100%);
+  background-color: #fef9e7;
+background-image: linear-gradient(315deg, #fef9e7 0%, #fddac5 74%);
+
 }
 
 .sticky {
