#198 added icons, modified navbar and header

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -4,6 +4,10 @@
 }
 .Navbar .title {
 	color: white !important;
+	font-weight: 500;
+}
+.Navbar .rightTitle {
+	font-weight: 600;
 }
 a {
 	text-decoration: none !important;
