--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -1,13 +1,14 @@
 .center {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  display: inline-block;
+  position: -webkit-sticky;
+  /* top: 50%; */
+  /* left: 50%; */
+  /* display: inline-block; */
+  margin: auto;
   width: 325px;
   border-radius: 20px;
   padding: 20px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  /* -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); */
   overflow: hidden;
   /* background-color: #6dd3e7 */
   background-image: -webkit-gradient(linear, left bottom, right top, from(#ff6e61), to(#e6938c));
@@ -20,8 +21,8 @@
     transition: -webkit-transform 0.5s;
     transition: transform 0.5s;
     transition: transform 0.5s, -webkit-transform 0.5s;
-    -webkit-transform: translate(-50%, -50%) scale(0.8);
-            transform: translate(-50%, -50%) scale(0.8);
+    /* -webkit-transform: translate(-50%, -50%) scale(0.8);
+            transform: translate(-50%, -50%) scale(0.8); */
   }
 }
 
@@ -127,7 +128,7 @@
 }
 
 .center .login input.password {
-  padding: 0 90px 0 40px;
+  padding: 0 50px 0 40px;
 }
 
 .center .login .password-button {
@@ -594,7 +595,9 @@
 }
 
 .modal-content {
-  border: 0px !important
+  border: 0px !important;
+  background-color: unset !important;
+  margin-top: 35%;
 }
 
 .fade {
