--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -14,8 +14,12 @@ label {
 .registerButton {
   background-color: transparent;
   border: none;
-  color: #243946;
-  text-decoration: underline;
+  color: white;
+  border: solid 2px white;
+  width: 100%;
+  height: 35px;
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.219);
 }
 .rightTitle {
   background-color: transparent !important;
@@ -24,13 +28,21 @@ label {
 .validation {
   color: white;
   margin-bottom: 0.5rem;
-  margin-left: 30px;
+}
+.success-validation {
+  color: rgb(35, 190, 35);
+  margin-bottom: 0.5rem;
+}
+.error-validation {
+  color: rgb(177, 10, 10);
+  margin-bottom: 0.5rem;
 }
 .center {
   position: -webkit-sticky;
   margin: auto;
   width: 325px;
   border-radius: 20px;
+  border: solid 2px white;
   padding: 20px;
   overflow: hidden;
   background-image: -webkit-gradient(linear, left bottom, right top, from(#ff6e61), to(#e6938c));
@@ -117,7 +129,7 @@ label {
 }
 
 .center .login input,
-.center .login .login-button {
+.center .login .login-button, .register-button {
   width: 100%;
   height: 35px;
   border: none;
@@ -170,8 +182,9 @@ label {
   border-radius: 30px;
   border: none;
   outline: none;
-  background-color: #243946;
-  color: #fff;
+  /* background-color: #243946; */
+  background-color: rgba(0, 0, 0, 0);
+  color: #000;
 }
 
 .center .login .password-button:active {
@@ -179,11 +192,13 @@ label {
           transform: scale(0.95);
 }
 
-.center .login .login-button {
+.center .login .login-button, .register-button {
   width: calc(100% - 40px);
   margin: 20px 20px 0;
   outline: none;
-  background-color: #243946;
+  /* background-color: #243946; */
+  background-color: rgba(0, 0, 0, 0.219);
+  border: solid 2px white;
   color: #fff;
   -webkit-transition: -webkit-transform 0.1s;
   transition: -webkit-transform 0.1s;
@@ -191,7 +206,7 @@ label {
   transition: transform 0.1s, -webkit-transform 0.1s;
 }
 
-.center .login .login-button:active {
+.center .login .login-button:active, .register-button:active {
   -webkit-transform: scale(0.95);
           transform: scale(0.95);
 }
@@ -215,7 +230,9 @@ label {
   height: 35px;
   margin: 0 10px;
   border-radius: 50%;
-  background-color: #243946;
+  /* background-color: #243946; */
+  background-color: rgba(0, 0, 0, 0.219);
+  border: solid 2px white;
   color: #fff;
   font-size: 18px;
   z-index: 50;
@@ -229,7 +246,7 @@ label {
 .center .footer {
   text-align: center;
   margin-top: 15px;
-  color: #243946;
+  color: white;
   text-decoration: underline;
   pointer-events: all;
 }
