--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -4,22 +4,32 @@
 }
 .showIt {
   display: block;
+  animation: fadeIn 0.8s;
+  -webkit-animation: fadeIn 0.8s ease-in;
 }
 .hideIt {
   display: none;
 }
+@-webkit-keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
+@keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
 label {
   margin-bottom: 0;
 }
-.registerButton {
+.register-button {
+  margin: auto;
+  display: flex;
+  padding-top: 15px;
+  text-align: center;
   background-color: transparent;
   border: none;
   color: white;
-  border: solid 2px white;
-  width: 100%;
-  height: 35px;
-  border-radius: 30px;
-  background-color: rgba(0, 0, 0, 0.219);
+  text-decoration: underline;
 }
 .rightTitle {
   background-color: transparent !important;
@@ -129,7 +139,7 @@ label {
 }
 
 .center .login input,
-.center .login .login-button, .register-button {
+.center .login .login-button {
   width: 100%;
   height: 35px;
   border: none;
@@ -192,7 +202,7 @@ label {
           transform: scale(0.95);
 }
 
-.center .login .login-button, .register-button {
+.center .login .login-button {
   width: calc(100% - 40px);
   margin: 20px 20px 0;
   outline: none;
@@ -206,7 +216,7 @@ label {
   transition: transform 0.1s, -webkit-transform 0.1s;
 }
 
-.center .login .login-button:active, .register-button:active {
+.center .login .login-button:active {
   -webkit-transform: scale(0.95);
           transform: scale(0.95);
 }
