#215 Fix interfering css and login register bug

--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -652,7 +652,7 @@ label {
   }
 }
 
-.modal-content {
+#modal-login > .modal-content {
   border: 0px !important;
   background-color: unset !important;
 }
