--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -495,7 +495,7 @@ label {
   overflow: hidden;
   width: inherit;
   border-radius: 20px;
-  margin: -20px;
+  margin: -22px;
 }
 
 /**
@@ -657,10 +657,68 @@ label {
   background-color: unset !important;
 }
 
-.fade {
-  transition: none !important;
-}
-
 .modal-dialog {
     max-width: fit-content !important;
+}
+
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: green;
+  fill: none;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmark {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  stroke-width: 2;
+  stroke: green;
+  stroke-miterlimit: 10;
+  box-shadow: inset 0px 0px 0px #7ac142;
+  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes scale {
+  0%, 100% {
+    transform: none;
+  }
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
+}
+@keyframes fill {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #fff;
+  }
+}
+#loginToastfalse {
+  position: absolute;
+  z-index: 500;
+  pointer-events: none;
+  border-radius: 8px;
+  right: 0px;
+  top: 0px;
+}
+#loginToasttrue {
+  position: absolute;
+  z-index: 500;
+  border-radius: 8px;
+  right: 0px;
+  top: 0px;
 }
