--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,7 +46,7 @@
 .parallax {
   /* The image used */
   background-color: #fef9e7;
-background-image: linear-gradient(315deg, #fef9e7 0%, #fddac5 74%);
+  background-image: linear-gradient(315deg, #fef9e7 0%, #fddac5 74%);
 
 }
 
@@ -72,4 +72,12 @@ hr {
 .row {
   margin-left: 0px !important;
   margin-right: 0px !important;
+}
+
+.chosen-cities{
+  background-image : url(https://is4-ssl.mzstatic.com/image/thumb/Purple3/v4/62/ea/d0/62ead0cd-89f3-636a-735d-f9be52172137/source/256x256bb.jpg);
+  font: normal normal normal 20px/1.4em georgia, palatino, 'book antiqua','palatino linotype', serif;
+  color: white;
+  text-align: center;
+  padding-top: 50%;
 }
