#196 #246 Retrieving chosen citites from db

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,8 +75,8 @@ hr {
 }
 
 .chosen-cities{
-  background-image : url(https://is4-ssl.mzstatic.com/image/thumb/Purple3/v4/62/ea/d0/62ead0cd-89f3-636a-735d-f9be52172137/source/256x256bb.jpg);
-  font: normal normal normal 20px/1.4em georgia, palatino, 'book antiqua','palatino linotype', serif;
+  background-image : url(https://popcanvasplus.com/wp-content/uploads/2018/08/Skyline-18-CMYk-1-256x256.jpg);
+  font: normal normal normal 32px/1.4em georgia, palatino, 'book antiqua','palatino linotype', serif;
   color: white;
   text-align: center;
   padding-top: 50%;
