#243 Add a logout button and an endpoint in the backend to allow redirecting once logged out

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -18,3 +18,7 @@ a {
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
 	background-color: #ff6e61;
 }
+
+.dropdown-item.active, .dropdown-item:active {
+	background-color: #ff6e61 !important;
+}
