--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,5 +1,4 @@
 .slider {
-  border: 1px solid red;
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
@@ -8,11 +7,12 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+  background-color: #fef9e7;
+  background-image: linear-gradient(315deg, #fef9e7 0%, #fddac5 74%);
 }
 
 .slide {
   position: relative;
-  border: 1px solid blue;
   min-width: 100%;
   height: 80%;
   transition: 0.5s;
@@ -27,6 +27,15 @@
   width: 10%;
   height: 80%;
   background: none;
+  border: none;
+  outline: none;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+#leftButton:hover{
+  background: rgba(0, 0, 0, 0.133);
+  color: whitesmoke;
 }
 
 #rightButton {
@@ -37,4 +46,17 @@
   width: 10%;
   height: 80%;
   background: none;
+  border: none;
+  outline: none;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+#rightButton:hover{
+  background: rgba(0, 0, 0, 0.133);
+  color: whitesmoke;
+}
+
+i {
+  font-size: 2vw;
 }
