--- a/client/src/components/Slider/Button.css
+++ b/client/src/components/Slider/Button.css
@@ -39,7 +39,7 @@
   transform: rotate(-45deg);
 }
 .button span:hover::after {
-  box-shadow: 40px -20px 0px #ea4c89, 41px -20px 8px rgba(0, 0, 0, 0.3), 80px 20px 0px #ea4c89, 81px 20px 8px rgba(0, 0, 0, 0.3), 120px 60px 0px #ea4c89, 121px 60px 8px rgba(0, 0, 0, 0.3), 160px 100px 0px #ea4c89, 161px 100px 8px rgba(0, 0, 0, 0.3), 200px 120px 0px #ee9b83;
+  box-shadow: 40px -20px 0px #ea4c89, 41px -20px 8px rgba(0, 0, 0, 0.3), 80px 20px 0px #ea4c89, 81px 20px 8px rgba(0, 0, 0, 0.3), 120px 60px 0px #ee9b83, 121px 60px 8px rgba(0, 0, 0, 0.3), 160px 100px 0px #ee9b83, 161px 100px 8px rgba(0, 0, 0, 0.3), 200px 120px 0px #ee9b83;
 }
 .button span:hover {
   box-shadow: 4px 34px 24px rgba(0, 0, 0, 0.3);
