--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,13 +1,29 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 
+.overlay:before {
+	content: '';
+	position: absolute;
+	background: linear-gradient(rgba(253, 218, 197, 0.212), rgb(253, 218, 197, 0.2));
+	border-radius: 5px;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index:1;
+	border-radius: 20px 20px 0 0;
+}
+.videoHeader {
+    position: absolute;
+    width: 100%;
+	height: 400px;
+	object-fit: cover;
+	z-index: 0;
+	border-radius: 20px 20px 0 0;
+}
 .AppHeaderWrapper {
 	padding-top: 150px;
 }
 .AppHeader {
-	/* background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('pictures/output-na.gif'); */
-	/* background: linear-gradient(rgb(253, 218, 197, 0.3), rgb(253, 218, 197, 0.2)), url('pictures/output-na.gif'); */
-	background-size: 100% 400px !important;
-	background-repeat: no-repeat !important;
 	width: 100%;
 	height: 400px !important;
 	z-index: 1;
@@ -20,7 +36,7 @@
 	font-size: 40px;
 	font-weight: 750;
 	font-family: 'Source Sans Pro', sans-serif;
-
+	position: relative;
 }
 .AppHeader .city {
 	text-align: center;
