--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,5 +92,5 @@ hr {
 .button{
   height: 25px;
   width: 25px;
-  background-image : url('../src/trafficImages/speaker.png');
+  background-image : url('../src/miscImages/speaker.png');
 }
