#258 changed the speaker icon to match our theme

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,8 +89,8 @@ hr {
   padding-top: 50%;
 }
 
-.button{
-  height: 25px;
-  width: 25px;
-  background-image : url('../src/miscImages/speaker.png');
+.buttonSpeaker{
+  height: 35px;
+  width: 33px;
+  border: none;
 }
