--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,6 +50,7 @@
 
 }
 
+
 .sticky {
   position: -webkit-sticky; /* Safari */
   position: sticky;
@@ -89,6 +90,15 @@ hr {
   padding-top: 50%;
 }
 
+.categories-btn{
+  margin-top: 32%;
+}
+
+.choice-btn{
+  margin-top: 5%;
+}
+
+
 * {
   font-family: system-ui;
   margin: 0;
@@ -110,7 +120,7 @@ main {
   background-image: linear-gradient(#fcbd78, #ff65c3);
   background-size: 200%;
   background-position: 0 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
@@ -132,7 +142,7 @@ main {
   width: 100%;
   height: 100%;
   height: 4rem;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   border: none;
@@ -267,3 +277,5 @@ main {
     left: -100px;
  }
 }
+
+
