--- a/client/src/components/TestCard/TestCard.css
+++ b/client/src/components/TestCard/TestCard.css
@@ -58,7 +58,7 @@ body, html {
 }
 @media (min-width: 768px) {
     .app-card-list {
-        width: 80%;
+        width: 100%;
         white-space: nowrap;
         margin-top: 0;
    }
@@ -66,8 +66,9 @@ body, html {
 .app-card-list .card {
     margin: 60px 30px;
     display: inline-block;
-    width: 45%;
+    width: 40%;
 }
+
 .app-card-list .card .card-body {
     white-space: normal;
 }
@@ -76,3 +77,7 @@ body, html {
     padding-top: 40px;
 }
 
+.card-title{
+    text-align: center;
+    margin-bottom: 25%;
+}
