262 #282 Modal for more info event

--- a/client/src/components/TestCard/TestCard.css
+++ b/client/src/components/TestCard/TestCard.css
@@ -81,3 +81,13 @@ body, html {
     text-align: center;
     margin-bottom: 25%;
 }
+
+.modal-content{
+    max-width: 45%;
+    margin-left: 30%;
+}
+
+.more-info-img{
+    max-width: 100%;
+}
+
