--- a/client/src/components/TestCard/TestCard.css
+++ b/client/src/components/TestCard/TestCard.css
@@ -79,7 +79,10 @@ body, html {
 
 .card-title{
     text-align: center;
-    margin-bottom: 25%;
+    margin-bottom: 15%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .modal-content{
