#262 #282 Adding like button when events are not in liked section

--- a/client/src/components/TestCard/TestCard.css
+++ b/client/src/components/TestCard/TestCard.css
@@ -90,7 +90,16 @@ body, html {
     margin-left: 30%;
 }
 
+
 .more-info-img{
     max-width: 100%;
+}
+
+.card-category{
+    text-align: center;
+}
+
+.date{
+    font-style: italic;
 }
 
