--- a/client/src/components/TestCard/TestCard.css
+++ b/client/src/components/TestCard/TestCard.css
@@ -90,6 +90,10 @@ body, html {
     margin-left: 30%;
 }
 
+.modal-like-button{
+    text-align: center;
+    margin-bottom: 3%;
+}
 
 .more-info-img{
     max-width: 100%;
