--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -111,3 +111,17 @@ body, html {
     font-style: italic;
 }
 
+.aws-btn {
+    --button-primary-color: #ea5940 !important;
+    --button-primary-color-dark: #000000 !important;
+    --button-primary-color-light: #000000 !important;
+    --button-primary-color-hover: #ea5940 !important;
+    --button-primary-color-active: #cfdee9 !important;
+    --button-primary-border: none !important;
+    --button-secondary-color: #e787b4 !important;
+    --button-secondary-color-dark: #000000 !important;
+    --button-secondary-color-light: #000000 !important;
+    --button-secondary-color-hover: #e787b4 !important;
+    --button-secondary-color-active: #cfdee9 !important;
+    --button-secondary-border: 1px solid #000000 !important;
+}
