--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -24,3 +24,12 @@
     
     align-items: center;
 }
+
+.aws-btn {
+    --button-primary-color: #ea5940 !important;
+    --button-primary-color-dark: #000000 !important;
+    --button-primary-color-light: #000000 !important;
+    --button-primary-color-hover: #ea5940 !important;
+    --button-primary-color-active: #cfdee9 !important;
+    --button-primary-border: none !important;
+}
