--- a/client/src/components/Weather/Skycon/Weather.css
+++ b/client/src/components/Weather/Skycon/Weather.css
@@ -1,3 +1,12 @@
 .flexbox-container {
     display: flex;
+    padding-left: 615px;
+    justify-content: center;
+
+}
+
+
+.flexbox-container2 {
+    display: flex;
+    
 }
