--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -57,3 +57,23 @@
 	color: #FF1C00;
 }
 
+
+
+.iImage{
+	background: url('../../miscImages/infoGrey.png');
+	background-size: 20px 20px;
+	border: none;
+	outline: none;
+	height: 20px;
+	width: 20px;
+}
+
+.iImage:hover {
+	background: url('../../miscImages/infoOrange.png');
+	background-size: 20px 20px;
+	border: none;
+	outline: none;
+	height: 20px;
+	width: 20px;
+}
+
