--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -78,7 +78,7 @@
 }
 
 .popup {
-
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -86,14 +86,13 @@
 	right: 0;
 	bottom: 0;
 	margin: auto;
-	background-color: rgba(0,0,0, 0.5);
+	background-color: rgba(157, 134, 128, 0.50);
   }
   .popup_inner {
 	position: absolute;
 	left: 25%;
-	right: 25%;
-	top: 25%;
-	bottom: 25%;
+	right: 30%;
+	top: 5%;
 	margin: auto;
 	background: white;
   }
