#262 #287 removing too dark shadow on buttons

--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -121,7 +121,7 @@ body, html {
     --button-primary-color-active: #cfdee9 !important;
     --button-primary-border: none !important;
     --button-secondary-color: #f7d2c7 !important;
-    --button-secondary-color-dark: #000000 !important;
+    --button-secondary-color-dark: #00000000  !important;
     --button-secondary-color-light: #000000 !important;
     --button-secondary-color-hover: #e787b4 !important;
     --button-secondary-color-active: #cfdee9 !important;
