--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -139,3 +139,7 @@ body, html {
 #cardbody{
     background-image: linear-gradient(#f7d2a94f, #d491bc7a);
 }
+
+#image_with_shadow{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 6px 20px 0 rgba(0, 0, 0, 0.43);
+}
