--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -96,6 +96,10 @@ body, html {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.46), 0 6px 20px 0 rgba(0, 0, 0, 0.46);
 }
 
+#modal-notification{
+    margin-left: 35%;
+}
+
 .modal-like-button{
     text-align: center;
     margin-bottom: 3%;
@@ -137,7 +141,7 @@ body, html {
 }
 
 #cardbody{
-    background-image: linear-gradient(#f7d2a94f, #d491bc7a);
+    background-image: linear-gradient(#f7d2a926, #d491bc24);
 }
 
 #image_with_shadow{
