--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -70,3 +70,46 @@
 	position: relative;
 	z-index: 1;
 }
+
+.iWhy{
+	background: url('../../miscImages/infoWhy.png');
+	background-size: 23px 23px;
+	border: none;
+	outline: none;
+	height: 23px;
+	width: 23px;
+}
+
+.why {
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	margin: auto; }
+
+.why_inner {
+	position: absolute;
+	text-align: left;
+	left: 25%;
+	right: 30%;
+	top: 25%;
+	background:rgba(255, 255, 255, 1); ;
+  }
+
+  .whyClose{
+	background: url('../../miscImages/closeGrey.png');
+	background-size: 20px 20px;
+	border: none;
+	outline: none;
+	height: 20px;
+	width: 20px;
+}
+
+.whyClose:hover {
+	background: url('../../miscImages/closeOrange.png');
+	background-size: 20px 20px;
+	border: none;
+	outline: none;
+	height: 20px;
+	width: 20px;
+}
