--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -71,6 +71,19 @@
 	z-index: 1;
 }
 
+.iCard {
+	font-family: 'Open Sans', sans-serif;
+}
+
+.iHeader {
+	color: rgb(134, 134, 146);
+	padding-left:10px;
+	padding-top:7px;
+	font-size: large;
+	height: 45px;
+	background: inherit;
+}
+
 .iWhy{
 	background: url('../../miscImages/infoWhy.png');
 	background-size: 23px 23px;
@@ -82,34 +95,17 @@
 
 .why {
 	font-family: 'Open Sans', sans-serif;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
-	margin: auto; }
+	margin: auto;
+ }
 
 .why_inner {
-	position: absolute;
+	position: fixed;
 	text-align: left;
-	left: 25%;
-	right: 30%;
-	top: 25%;
-	background:rgba(255, 255, 255, 1); ;
+	width:400px;
+	top:30%;
+	left:35%;
+	background:linear-gradient(315deg, #fef9e7 0%, #fddac5 74%);
   }
-
-  .whyClose{
-	background: url('../../miscImages/closeGrey.png');
-	background-size: 20px 20px;
-	border: none;
-	outline: none;
-	height: 20px;
-	width: 20px;
-}
-
-.whyClose:hover {
-	background: url('../../miscImages/closeOrange.png');
-	background-size: 20px 20px;
-	border: none;
-	outline: none;
-	height: 20px;
-	width: 20px;
-}
