--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -93,19 +93,8 @@
 	width: 23px;
 }
 
-.why {
-	font-family: 'Open Sans', sans-serif;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	margin: auto;
- }
-
-.why_inner {
-	position: fixed;
-	text-align: left;
-	width:400px;
+.whyCard{
 	top:30%;
 	left:35%;
-	background:linear-gradient(315deg, #fef9e7 0%, #fddac5 74%);
-  }
+	background:linear-gradient(315deg, #fef9e7 0%, #e6ffff 74%);
+}
