--- a/client/src/components/Frame/Frame.css
+++ b/client/src/components/Frame/Frame.css
@@ -1,22 +1,19 @@
-.frame {
-	-webkit-box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.1);
-}
+
 .zoom-on-hover {
 	transition: all 0.5s ease-in-out;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 }
 .zoom-on-hover:hover {
-	-moz-transform: scale(1.01);
-	-webkit-transform: scale(1.01);
-	-o-transform: scale(1.01);
-	-ms-transform: scale(1.01);
-	transform: scale(1.01);
+	-moz-transform: scale(1.02);
+	-webkit-transform: scale(1.02);
+	-o-transform: scale(1.02);
+	-ms-transform: scale(1.02);
+	transform: scale(1.02);
 }
 /* Photo */
 .frame {
-	width: 375px;
+	width: 100%;
 	object-fit: cover;
 	left: 0;
   top: 0;
@@ -38,13 +35,13 @@
 	color: black;
 	background: white;
 	margin: 0;
-	height: 40px;
+	height: 18px;
 	width: 100%;
 }
 .frameCaption img {
-	height: 40px;
-	width: 40px;
-	padding: 8px;
+	height: 18px;
+	width: 18px;
+	padding: 4px;
 }
 
 .frameHeader {
@@ -54,29 +51,29 @@
 	color: black;
 	background: white;
 	margin: 0;
-	padding: 16px 40px 16px 16px;
+	padding: 8px 20px 8px 8px;
 	align-items: center;
-	height: 60px;
+	height: 25px;
 	width: 100%;
 }
 
 .frameHeader .profilePic {
 	align-self: center;
 	display: block;
-	height: 32px;
-	width: 32px;
+	height: 16px;
+	width: 16px;
 }
 
 .profilePic img {
 	align-self: center;
 	display: block;
-	height: 32px;
-	width: 32px;
+	height: 16px;
+	width: 16px;
 }
 
 .frameHeader .picInfo {
-	width: 275px;
-	margin-left: 12px;
+	width: 150px;
+	margin-left: 6px;
 	align-items: flex-start;
 	display: flex;
 	flex-grow: 1;
@@ -85,14 +82,14 @@
 }
 
 .frameHeader .picInfo .infoTitle {
-	font-size: 14px;
-	line-height: 18px;
+	font-size: 7px;
+	line-height: 9px;
 	font-weight: 600;
 }
 
 .frameHeader .picInfo .infoSubtitle {
-	line-height: 15px;
-	font-size: 12px;
+	line-height: 7px;
+	font-size: 6px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
