#272 changed the z-index in the css files to give priority to the info component

--- a/client/src/components/WhyCard/WhyCard.css
+++ b/client/src/components/WhyCard/WhyCard.css
@@ -1,12 +1,13 @@
 .why {
 	font-family: 'Open Sans', sans-serif;
 	position: fixed;
-
+	z-index: 3;
  }
 
 .why_inner {
 	position: fixed;
 	width:350px;
+	z-index: 3;
 }
 
 .cardBody{
