--- a/client/src/pages/TrendingSpots.css
+++ b/client/src/pages/TrendingSpots.css
@@ -4,48 +4,83 @@
 @import url('https://fonts.googleapis.com/css?family=Suranna&display=swap');
 
 body {
-  position: absolute;
-  background-color: #fee8d8;
-  height: 100%;
-  /* font-family: 'Playfair Display', serif; */
-  /* font-family: 'Prata', serif; */
-  /* font-family: 'Suranna', serif; */
-  color: #707378;
+	background-color: #fee8d8;
+	/* font-family: 'Playfair Display', serif; */
+	/* font-family: 'Prata', serif; */
+	/* font-family: 'Suranna', serif; */
+	color: #707378;
 }
 
 .mainTitle {
-  font-family: 'Prata', serif;
-  text-align: center;
+	font-family: 'Prata', serif;
+	text-align: center;
   margin-top: 4%;
-  font-weight: 550;
-  font-size: 58px;
+  margin-bottom: 1%;
+	font-weight: 550;
+	font-size: 58px;
 }
 
 .wrapper {
-  position: fixed;
-  height: 100%;
+	height: 100%;
 }
 
 .quote {
-  font-family: 'Playfair Display', serif;
-  grid-area: 2 / 1 / 3 / 3;
-  font-size: 33px;
-  font-weight: 550;
-  margin-top: -40px;
+	font-family: 'Playfair Display', serif;
+	grid-area: 2 / 1 / 3 / 3;
+	font-size: 33px;
+	font-weight: 550;
+	margin-top: -40px;
 }
 
-.date {
-  font-size: 18px;
-  font-weight: 550;
-  margin-top: -30px;
-  font-family: 'Lato', sans-serif;
+.weekDate {
+	font-size: 15px;
+	font-weight: 600;
+	margin-top: -30px;
+	font-family: 'Lato', sans-serif;
   letter-spacing: 12px;
+  text-align: center;
 }
 
 .weekOf {
-  text-align: center;
-  font-size: 22px;
-  font-weight: 550;
-  margin-top: -55px;
-  font-family: 'Playfair Display', serif;
+	text-align: center;
+	font-size: 22px;
+	font-weight: 550;
+	margin-top: -55px;
+	font-family: 'Playfair Display', serif;
+}
+
+.CSSgrid {
+	position: relative;
+	display: grid;
+	grid-template-columns: 14% 14% 14% 14% 14%;
+	grid-gap: 23px;
+	padding-bottom: 0;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+}
+
+@media screen and (max-width: 500px) {
+	.CSSgrid {
+		display: block;
+  }
+  .quote {
+    margin: 0;
+  }
+  .weekDate {
+    padding-top: 30px;
+    margin: 0;
+    text-align: center;
+  }
+  .instaPhoto {
+    padding: 20px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+	.mainTitle {
+    margin-top: 7%;
+    margin-bottom: 3%;
+    font-size: 65px;
+  }
 }
