--- a/client/src/components/CitiesCard/CitiesCard.css
+++ b/client/src/components/CitiesCard/CitiesCard.css
@@ -4,11 +4,11 @@
 	-moz-transition: all 0.5s ease-in-out;
 }
 .zoom-on-hover:hover {
-	-moz-transform: scale(2);
-	-webkit-transform: scale(2);
-	-o-transform: scale(2);
-	-ms-transform: scale(2);
-  transform: scale(2);
+	-moz-transform: scale(1.02);
+	-webkit-transform: scale(1.02);
+	-o-transform: scale(1.02);
+	-ms-transform: scale(1.02);
+	transform: scale(1.02);
 }
 
 .gridWrapper {
@@ -50,6 +50,8 @@
 }
 
 .imgContainer {
+  width: 200px;
+  height: 200px;
   position: relative;
   text-align: center;
   color: white;
