--- a/client/src/pages/Me.css
+++ b/client/src/pages/Me.css
@@ -1,3 +1,67 @@
+@font-face {
+  font-family: "milea";
+  src: url("../fonts/Milea_Demo.woff") format('woff');
+}
+
 body {
   background-color: #fddac5;
+}
+
+.meTitle {
+  font-family: milea;
+  margin-top: -12%;
+  margin-left: 14%;
+  font-size: 200px;
+  position: fixed;
+  transform: rotate(-15deg);
+  z-index: -1;
+}
+
+.citiesCardWrapper {
+  transform: scale(1);
+  margin-top: 15%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.currentDate {
+  margin-top: -9%;
+  margin-left: 7%;
+  position: fixed;
+  font-size: 20px;
+	font-weight: 600;
+	font-family: 'Lato', sans-serif;
+	letter-spacing: 12px;
+}
+
+.timbreImage {
+  position: fixed;
+  transform: scale(0.3);
+  margin-left: 45%;
+  margin-top: -26%;
+}
+
+@media screen and (max-width: 500px) {
+  .citiesCardWrapper {
+    transform: scale(0.7);
+    margin-top: -20%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+  .currentDate {
+    margin-top: 420px;
+    margin-left: 20%;
+  }
+  .timbreImage {
+    display: none;
+  }
+  .meTitle {
+  margin-top: 15%;
+  margin-left: 14%;
+  font-size: 60px;
+  position: relative;
+  transform: rotate(0deg);
+  }
 }
