--- a/client/src/components/Frame/Frame.css
+++ b/client/src/components/Frame/Frame.css
@@ -13,16 +13,17 @@
 }
 /* Photo */
 .frame {
-	width: 200px;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	left: 0;
   top: 0;
 	position: relative;
 	overflow: hidden;
 }
-.frame .mainImg {
-	width: 200px;
-	height: 250px !important;
+.frame img {
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	left: 0;
   top: 0;
