--- a/client/src/Events.css
+++ b/client/src/Events.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
   }
-  body {
+  .event-body {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to top right, #ff6e618f, #eb999275);
