--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -63,6 +63,7 @@
     outline: none;
   }
   .main-content {
+    margin-top: -3.5em;
     width: 100%;
     display: flex;
     flex-direction: column;
