#306 #307 adding context for bot

--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -127,7 +127,7 @@
     --button-secondary-color: #f7d2c7 !important;
     --button-secondary-color-dark: #00000000  !important;
     --button-secondary-color-light: #000000 !important;
-    --button-secondary-color-hover: #e787b4 !important;
+    --button-secondary-color-hover: #ee7267 !important;
     --button-secondary-color-active: #cfdee9 !important;
     --button-secondary-border: 1px solid #000000 !important;
     --button-default-height: 51px !important;
