--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -106,8 +106,9 @@
 }
 
 .responsive-more-info {
-  width: 100%;
-  height: auto;
+    max-width: 100%;
+    /* width: 100%; */
+    /* height: auto; */
 }
 
 .card-category{
