#306 #307 fixing UserSelection display

--- a/client/src/components/EventsCard/BotSlider/BotSlider.css
+++ b/client/src/components/EventsCard/BotSlider/BotSlider.css
@@ -2,9 +2,10 @@
     overflow: hidden;
   }
 
-  .content-image{
+  .knowledge-image{
     overflow: hidden;
     height: 35em !important;
+    width: 100%;
   }
 
   .content .content-overlay {
