--- a/client/src/components/CoronaHeader/CoronaHeader.css
+++ b/client/src/components/CoronaHeader/CoronaHeader.css
@@ -1,5 +1,5 @@
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/corona.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/corona.png");
     height: 500px;
     background-position: center;
     background-repeat: no-repeat;
@@ -71,7 +71,7 @@
 .SearchBar {
     margin-top: 150px;
     padding: 50px;
-    z-index: 1000;
+    z-index: 100;
 }
 
 .ReactTable {
