#329 Added aos package and implemented animations for all cards

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,12 +102,16 @@ hr {
   margin-top: 1%;
 }
 
-
-
 .buttonSpeaker{
   height: 35px;
   width: 33px;
   border: none;
+  background-color: white;
+  color: #727273;
+}
+
+.fa-volume-up:hover{
+  color: #4879E0;
 }
 
 .map-darksky{
