--- a/client/src/pages/TrendingSpots.css
+++ b/client/src/pages/TrendingSpots.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Prata&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Suranna&display=swap');
 
-body {
+.trendingBody {
 	background-color: #fee8d8;
 	/* font-family: 'Playfair Display', serif; */
 	/* font-family: 'Prata', serif; */
