#331 Added new components to refactor country page and a new overlay in the same page

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .Navbar {
 	background-color: transparent;
-	z-index: 50;
+	z-index: 2;
+	position: absolute;
 }
 .Navbar .title {
 	color: white !important;
