--- a/client/src/components/Frame/Frame.css
+++ b/client/src/components/Frame/Frame.css
@@ -37,7 +37,7 @@
 /* Caption */
 .frameCaption {
 	color: black;
-	background: white;
+	background: #FBF4EF;
 	margin: 0;
 	height: 18px;
 	width: 100%;
@@ -53,7 +53,7 @@
 	flex-direction: row;
 	flex-shrink: 0;
 	color: black;
-	background: white;
+	background: #FBF4EF;
 	margin: 0;
 	padding: 8px 20px 8px 8px;
 	align-items: center;
