--- a/client/src/components/CitiesCard/CitiesCard.css
+++ b/client/src/components/CitiesCard/CitiesCard.css
@@ -23,6 +23,8 @@
 }
 
 .outerFrame {
+  border: 0.5px solid #343a40;
+	border-radius: 5px;
   background-color: white;
   width: 460px;
   height: 460px;
