--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -6,7 +6,7 @@
   .event-body {
     width: 100%;
     height: 100%;
-    background-color: #fddac5;
+    background-color: #fee8d8;
   }
   main {
     display: flex;
