#340 updated storyshot tests, changed gradient and background colors of various pages

--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -184,5 +184,5 @@
   .popover-context{
     text-align: center;
     padding: 5px;
-    background:linear-gradient(315deg, #FDE9DB 10%, #DEE7F3 54%);
+    background:linear-gradient(315deg, #fee8d8 10%, #DEE7F3 54%);
   }
