--- a/client/src/components/WhyCard/WhyCard.css
+++ b/client/src/components/WhyCard/WhyCard.css
@@ -2,7 +2,7 @@
 	font-family: 'Open Sans', sans-serif;
  }
 .mainCardClass {
-	background:linear-gradient(315deg, #FDE9DB 10%, #DEE7F3 54%);
+	background:linear-gradient(315deg, #fee8d8 10%, #DEE7F3 54%);
 }
 .why_inner {
 	position: fixed;
